backend: Fix calculating the display aspect ratio

Based on the size of the monitor where the video is being displayed,
as opposed to the full "GdkScreen" (which might include multiple
monitors).

This doesn't handle moving the video between 2 displays with different
display aspect ratio, but should fix the worst case scenarios in dual
head setups.

https://bugzilla.gnome.org/show_bug.cgi?id=658292